--- a/app/src/main/res/layout/fragment_products_list_view.xml
+++ b/app/src/main/res/layout/fragment_products_list_view.xml
@@ -1,43 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    >
 
-    <TextView
-        android:id="@+id/productNameTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mouse"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <TextView
-            android:id="@+id/productPriceTv"
+            android:id="@+id/productNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price: "
-            android:layout_marginTop="10dp"
+            android:text="Mouse"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
-        <TextView
-            android:id="@+id/productCategoryTv"
-            android:layout_width="wrap_content"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Category"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"/>
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/productPriceTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price: "
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
+            <TextView
+                android:id="@+id/productCategoryTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Category"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"/>
+        </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/colorAccent"/>
     </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorAccent"/>
 
-</LinearLayout>
+
+</androidx.cardview.widget.CardView>
